xdp_flowcache.org: Tag project as long-term
Only the one project, no need to do a full categorisation sub-heading
structure in this file for now.

Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/areas/xdp_flowcache.org
+++ b/areas/xdp_flowcache.org
@@ -82,7 +82,7 @@ doing this work and creating standardised way of exposing needed information
 the HW vendors could all use these APIs, negating all the work currently
 being done to hook their accelerators into the Linux kernel forwarding path.
 
-* TODO XDP flowcache project
+* TODO XDP flowcache project                                          :@long:
 
 ** TODO Investigate feasibility of approach
 Basic investigation on feasibility and make first draft on what needs to
