--- a/areas/mem.org
+++ b/areas/mem.org
@@ -30,6 +30,13 @@ CLOSED: [2019-01-29 Tue 17:33]
 * TODO page_pool handling in-flight frames during shutdown
 See [[file:mem/page_pool03_shutdown_inflight.org]]
 
+** DONE Test if __xdp_return() can hit no page_pool id issue
+CLOSED: [2019-05-21 Tue 16:40]
+:LOGBOOK:
+- State "DONE"       from "NEXT"       [2019-05-21 Tue 16:40]
+:END:
+Confirmed this can happen.
+
 ** NEXT page_pool inflight: Code solution#3
 
 ** TODO Create tracepoints for page_pool
