--- a/areas/mem.org
+++ b/areas/mem.org
@@ -47,6 +47,22 @@ When delaying freeing the registered XDP memory model, then we cannot have
 drivers calling page_pool_destroy() directly. Figure out a clean code way to do
 this.
 
+** TODO page_pool inflight: howto delay/postpone work in kernel
+
+What is the best way to delay taking down page_pool object when driver calls
+xdp_rxq_info_unreg_mem_model(), in the case page_pool detect/have in-flight
+frames?
+
+Should we create a workqueue?
+#+begin_src C
+#include <linux/workqueue.h>
+static struct workqueue_struct *wq;
+wq = alloc_workqueue("xdp_mem_dismantle_wq", 0, 0);
+struct work_struct free_work;
+INIT_WORK(&free_work, __unreg_mem_model_schedule);
+queue_work(wq, &free_work);
+#+end_src
+
 ** NEXT page_pool inflight: Code solution#3
 
 ** TODO Create tracepoints for page_pool
